# AAML-Research-Project

./: .env.example  .gitattributes  .gitignore  DEVPLAN.md  README.md  RESEARCH.MD  pyproject.toml  requirements-extras.txt  requirements-ntl.txt  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
configs/: data.yaml  experiment.example.yaml  hypotheses.yaml  ntl.yaml  panel.yaml  regions.yaml  sector_fred_map.yaml
docs/: DEVLOG.md
docs/devplan/: 00-overview-and-setup.md  01-data-ntl.md  02-data-financial-macro.md  03-panel-and-splits.md  04-models-and-training.md  05-evaluation-and-stats.md  06-paper-and-deliverables.md  REVIEW.md
experiments/: PREREG.md
proposal/: roth_proposal.tex
scripts/: analyze_results.py  build_panel.py  check_env.py  download_data.py  download_finance.py  download_macro.py  download_ntl.py  merge_results.py  run_all.ps1  run_all.sh  run_experiment.py  run_experiments.ps1  run_gpu.sh
src/marsseg/data/: ai4mars.py  dataset.py  transforms.py
src/marsseg/models/: zoo.py
src/marsseg/train/: lit.py  loss.py
src/marsseg/utils/: capabilities.py  config.py  logging.py  (+2 more)
tests/: conftest.py  test_capabilities.py  test_config.py  test_data.py  test_eval.py  test_finance.py  test_import.py  test_leakage.py  test_macro.py  test_manifest.py  test_metrics.py  test_models.py  test_ntl_features.py  test_ntl_smoke.py  test_panel.py  test_panel_contract.py  test_prereg.py  test_pretrain.py  test_regions.py  test_results.py  test_seed.py  test_smoke.py  test_splits.py  test_stats.py  test_transform_registry.py  test_vix.py
(+29 files in other folders)
